--- a/collaboration_backend/collaboration_backend/.settings/org.eclipse.wst.common.component
+++ b/collaboration_backend/collaboration_backend/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,8 @@
     <wb-module deploy-name="collaboration_backend">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <property name="context-root" value="collaboration_backend"/>
         <property name="java-output-path" value="/collaboration_backend/target/classes"/>
     </wb-module>
