worked on UI. now working on cruds of user module.

--- a/online_collaboration/app/components/page/about.html
+++ b/online_collaboration/app/components/page/about.html
@@ -1,5 +1,11 @@
-<div class="jumbotron text-center">
-    <h1>About Page</h1>
-
-    <p>{{ message }}</p>
+<div class="container">
+    <div class="teal-text text-darken-4">
+        <h4>About us</h4>
+    </div>
+    <div align="center">
+        <img src="assets/img/About_us.jpg" class="img-square" alt="Cinque Terre" width="750" height="750">
+    </div><br>
+    <div align="center">
+        <img src="assets/img/About_us1.jpg" class="img-square" alt="Cinque Terre" width="500" height="500">
+    </div>
 </div>
