--- a/online_collaboration/app/components/page/home.html
+++ b/online_collaboration/app/components/page/home.html
@@ -1,5 +1,101 @@
-<div class="jumbotron text-center">
-    <h1>Home Page</h1>
-
-    <p>{{ message }}</p>
+<div class="container">
+    <div class="col s12 m5">
+        <div class="card grey lighten-3">
+            <div class="card-content grey-text text-darken-1">
+                <div class="row">
+                    <div align="center">
+                        <img src="assets/img/clogo.png" class="img-circle" alt="Cinque Terre" width="100" height="100">
+                    </div>
+                </div>
+                <div class="row">
+                    <div align="center">
+                        <span class="card-title coll blue-grey-text text-darken-2">COLLABORATION</span><br>
+                        <span class="coll blue-grey-text text-darken-2">Registration Form</span>
+                    </div>
+                </div>
+                <form name="userForm" class="col s12" ng-submit="submitForm(userForm.$valid)" novalidate>
+                    <div class="row">
+                        <div class="input-field col s4">
+                            <input type="checkbox" id="test6" />
+                            <label for="test6">Staff</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <input type="checkbox" id="test5" />
+                            <label for="test5">Student</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <input type="checkbox" id="indeterminate-checkbox" />
+                            <label for="indeterminate-checkbox">Admin</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input id="icon_prefix" type="text" class="validate" ng-model="firstName" required>
+                            <p ng-show="userForm.name.$invalid && !userForm.name.$pristine" class="help-block">Name is required.</p>
+                            <label for="icon_prefix">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">assignment_ind</i>
+                            <input id="icon_prefix" type="text" class="validate" ng-model="firstName" required>
+                            <p ng-show="userForm.name.$invalid && !userForm.name.$pristine" class="help-block">Name is required.</p>
+                            <label for="icon_prefix">Last Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">perm_identity</i>
+                            <input id="icon_prefix" type="text" class="validate" ng-model="user.username" ng-minlength="3" ng-maxlength="6">
+                            <p ng-show="userForm.username.$error.minlength" class="help-block">Username is too short.</p>
+                            <p ng-show="userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+                            <label for="icon_prefix">Username</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">email</i>
+                            <input id="icon_prefix" type="text" class="validate" ng-model="email">
+                            <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+                            <label for="icon_prefix">Email</label>
+                        </div>
+                    </div>
+                    <!--<div class="row">
+                            <form action="#">
+                                <div class="file-field input-field">
+                                    <div class="btn">
+                                        <span>File</span>
+                                        <input type="file" multiple>
+                                    </div>
+                                    <div class="file-path-wrapper">
+                                        <input class="file-path validate" type="text" placeholder="Upload one or more files">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>-->
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">lock_outline</i>
+                            <input id="icon_telephone" type="tel" class="validate" ng-minlength="3" ng-maxlength="8">
+                            <p ng-show="userForm.username.$error.minlength" class="help-block">Password is too short.</p>
+                            <p ng-show="userForm.username.$error.maxlength" class="help-block">Password is too long.</p>
+                            <label for="icon_telephone">Password</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">lock_outline</i>
+                            <input id="icon_telephone" type="tel" class="validate">
+                            <label for="icon_telephone">Re-Password</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="card-action">
+                <div class="row">
+                    <span class="blue-grey lighten-4">
+                        <a class="waves-effect waves-light btn col s12 blue-grey lighten-4 blue-grey-text text-darken-2" ng-disabled="userForm.$invalid">Register</a>
+                        </span>
+                </div>
+                <a class="link pull-right"><span class="blue-grey-text text-darken-2">Login now!</span></a>
+                <br>
+            </div>
+        </div>
+    </div>
 </div>
+<!-- register page ends here -->
