--- a/online_collaboration/app/components/authentication/register.html
+++ b/online_collaboration/app/components/authentication/register.html
@@ -13,31 +13,53 @@
                         <span class="blue-grey-text text-darken-2">Registration Form</span>
                     </div>
                 </div>
-                <form name="userForm" ng-submit="submitForm(userForm.$valid)" novalidate>
+                <form name="userForm" ng-submit="authCtrl.register(userForm.$valid)" novalidate>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <label for="role"><b>Register As: </b></label>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="input-field col s4">
                             <!--<input class="checkbox" type="checkbox" id="staff" />
                             <label for="staff">Staff</label>-->
-                            <input class="with-gap" name="role" type="radio" id="staff" />
+                            <input class="with-gap" name="role" type="radio" id="staff" value="STAFF" ng-model="authCtrl.client.role" />
                             <label for="staff">Staff</label>
                         </div>
                         <div class="input-field col s4">
                             <!--<input class="checkbox" type="checkbox" id="student" />
                             <label for="student">Student</label>-->
-                            <input class="with-gap" name="role" type="radio" id="student" />
+                            <input class="with-gap" name="role" type="radio" id="student" value="STUDENT" ng-model="authCtrl.client.role" />
                             <label for="student">Student</label>
                         </div>
                         <div class="input-field col s4">
                             <!--<input class="checkbox" type="checkbox" id="admin" />
                             <label for="admin">Admin</label>-->
-                            <input class="with-gap" name="role" type="radio" id="admin" />
+                            <input class="with-gap" name="role" type="radio" id="admin" value="ADMIN" ng-model="authCtrl.client.role" />
                             <label for="admin">Admin</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s2">
+                            <label for="gender"><b>Gender: </b></label>
+                        </div>
+                        <div class="input-field col s4">
+                            <!--<input class="checkbox" type="checkbox" id="staff" />
+                            <label for="staff">Staff</label>-->
+                            <input class="with-gap" name="gender" type="radio" id="male" value="MALE" ng-model="authCtrl.client.gender" />
+                            <label for="male">Male</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <!--<input class="checkbox" type="checkbox" id="student" />
+                            <label for="student">Student</label>-->
+                            <input class="with-gap" name="gender" type="radio" id="female" value="FEMALE" ng-model="authCtrl.client.gender" />
+                            <label for="female">Female</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">account_circle</i>
-                            <input id="firstName" name="firstName" type="text" class="validate" ng-model="firstName" ng-minlength="2" ng-maxlength="8"
+                            <input id="firstName" name="firstName" type="text" class="validate" ng-minlength="2" ng-maxlength="8" ng-model="authCtrl.client.firstName"
                                 required>
                             <p ng-show="userForm.firstName.$error.minlength" class="help-block red-text text-accent-4">*First name is too short.</p>
                             <p ng-show="userForm.firstName.$error.maxlength" class="help-block red-text text-accent-4">*First name is too long.</p>
@@ -46,7 +68,8 @@
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">assignment_ind</i>
-                            <input id="lastName" name="lastName" type="text" class="validate" ng-model="lastName" ng-minlength="2" ng-maxlength="8" required>
+                            <input id="lastName" name="lastName" type="text" class="validate" ng-minlength="2" ng-maxlength="8" ng-model="authCtrl.client.lastName"
+                                required>
                             <p ng-show="userForm.lastName.$error.minlength" class="help-block red-text text-accent-4">*Last name is too short.</p>
                             <p ng-show="userForm.lastName.$error.maxlength" class="help-block red-text text-accent-4">*Last name is too long.</p>
                             <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
@@ -56,14 +79,14 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">perm_identity</i>
-                            <input id="username" name="username" type="text" class="validate" ng-model="username" ng-minlength="3" required>
+                            <input id="username" name="username" type="text" class="validate" ng-minlength="3" ng-model="authCtrl.client.username" required>
                             <p ng-show="userForm.username.$error.minlength" class="help-block red-text text-accent-4">*Username is too short.</p>
                             <p ng-show="userForm.username.$invalid && !userForm.username.$pristine" class="help-block red-text text-accent-4">*Username is required.</p>
                             <label for="username">Username</label>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">email</i>
-                            <input id="email" name="email" type="email" class="validate" ng-model="email" name="email">
+                            <input id="email" name="email" type="email" class="validate" name="email" ng-model="authCtrl.client.emailId">
                             <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block red-text text-accent-4">*Enter a valid email.</p>
                             <label for="email">Email</label>
                         </div>
@@ -84,7 +107,8 @@
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">lock_outline</i>
-                            <input id="password" type="password" class="validate" ng-model="password" ng-minlength="3" ng-maxlength="8" ng-required name="password">
+                            <input id="password" type="password" class="validate" ng-minlength="3" ng-maxlength="8" ng-required name="password" ng-model="authCtrl.client.password"
+                            />
                             <p ng-show="userForm.password.$error.minlength" class="help-block red-text text-accent-4">*Password is too short.</p>
                             <p ng-show="userForm.password.$error.maxlength" class="help-block red-text text-accent-4">*Password is too long.</p>
                             <p ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block red-text text-accent-4">*Password is required.</p>
@@ -92,22 +116,21 @@
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">lock_outline</i>
-                            <input id="confirmPassword" type="password" class="validate" name="confirmPassword" ng-model="confirmPassword" ng-required
-                                pw-check='password'>
-                            <p ng-show="userForm.confirmPassword.$error.pwmatch" class="help-block red-text text-accent-4">*Re-Password does not match.</p>
+                            <input id="confirmPassword" type="password" class="validate" name="confirmPassword" ng-model="authCtrl.client.confirmPassword"
+                                ng-required>
                             <p ng-show="userForm.confirmPassword.$invalid && !userForm.confirmPassword.$pristine" class="help-block red-text text-accent-4">*Re-Password is required.</p>
                             <label for="confirmPassword">Re-Password</label>
                         </div>
                     </div>
+                    <div class="row">
+                        <span class="blue-grey lighten-4">
+                        <button class="waves-effect waves-light btn col s12 blue-grey lighten-4 blue-grey-text text-darken-2 hoverable" ng-disabled="userForm.$invalid">Register</button>
+                        </span>
+                    </div>
                 </form>
             </div>
             <div class="card-action">
-                <div class="row">
-                    <span class="blue-grey lighten-4">
-                        <button class="waves-effect waves-light btn col s12 blue-grey lighten-4 blue-grey-text text-darken-2 hoverable" ng-disabled="userForm.$invalid" ng-click="userCtrl.submit()">Register</button>
-                        </span>
-                </div>
-                <a class="link pull-right"><span class="blue-grey-text text-darken-2">Login now!</span></a>
+                <a href="#!/login" class="link pull-right"><span class="blue-grey-text text-darken-2">Login now!</span></a>
                 <br>
             </div>
         </div>
