--- a/online_collaboration/app/components/authentication/register.html
+++ b/online_collaboration/app/components/authentication/register.html
@@ -23,13 +23,13 @@
                         <div class="input-field col s4">
                             <!--<input class="checkbox" type="checkbox" id="staff" />
                             <label for="staff">Staff</label>-->
-                            <input class="with-gap" name="role" type="radio" id="staff" value="STAFF" ng-model="authCtrl.client.role" />
+                            <input class="with-gap" name="role" type="radio" id="staff" value="USER" ng-model="authCtrl.client.role" />
                             <label for="staff">Staff</label>
                         </div>
                         <div class="input-field col s4">
                             <!--<input class="checkbox" type="checkbox" id="student" />
                             <label for="student">Student</label>-->
-                            <input class="with-gap" name="role" type="radio" id="student" value="STUDENT" ng-model="authCtrl.client.role" />
+                            <input class="with-gap" name="role" type="radio" id="student" value="USER" ng-model="authCtrl.client.role" />
                             <label for="student">Student</label>
                         </div>
                         <div class="input-field col s4">
@@ -63,7 +63,7 @@
                                 required>
                             <p ng-show="userForm.firstName.$error.minlength" class="help-block red-text text-accent-4">*First name is too short.</p>
                             <p ng-show="userForm.firstName.$error.maxlength" class="help-block red-text text-accent-4">*First name is too long.</p>
-                            <p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
+                            <p ng-show="!userForm.firstName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
                             <label for="firstName">First Name</label>
                         </div>
                         <div class="input-field col s6">
@@ -72,7 +72,7 @@
                                 required>
                             <p ng-show="userForm.lastName.$error.minlength" class="help-block red-text text-accent-4">*Last name is too short.</p>
                             <p ng-show="userForm.lastName.$error.maxlength" class="help-block red-text text-accent-4">*Last name is too long.</p>
-                            <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
+                            <p ng-show="!userForm.lastName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
                             <label for="lastName">Last Name</label>
                         </div>
                     </div>
@@ -81,13 +81,13 @@
                             <i class="material-icons prefix">perm_identity</i>
                             <input id="username" name="username" type="text" class="validate" ng-minlength="3" ng-model="authCtrl.client.username" required>
                             <p ng-show="userForm.username.$error.minlength" class="help-block red-text text-accent-4">*Username is too short.</p>
-                            <p ng-show="userForm.username.$invalid && !userForm.username.$pristine" class="help-block red-text text-accent-4">*Username is required.</p>
+                            <p ng-show="!userForm.username.$pristine" class="help-block red-text text-accent-4">*Username is required.</p>
                             <label for="username">Username</label>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">email</i>
                             <input id="email" name="email" type="email" class="validate" name="email" ng-model="authCtrl.client.emailId">
-                            <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block red-text text-accent-4">*Enter a valid email.</p>
+                            <p ng-show="!userForm.email.$pristine" class="help-block red-text text-accent-4">*Enter a valid email.</p>
                             <label for="email">Email</label>
                         </div>
                     </div>
@@ -111,14 +111,14 @@
                             />
                             <p ng-show="userForm.password.$error.minlength" class="help-block red-text text-accent-4">*Password is too short.</p>
                             <p ng-show="userForm.password.$error.maxlength" class="help-block red-text text-accent-4">*Password is too long.</p>
-                            <p ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block red-text text-accent-4">*Password is required.</p>
+                            <p ng-show="!userForm.password.$pristine" class="help-block red-text text-accent-4">*Password is required.</p>
                             <label for="password">Password</label>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">lock_outline</i>
                             <input id="confirmPassword" type="password" class="validate" name="confirmPassword" ng-model="authCtrl.client.confirmPassword"
                                 ng-required>
-                            <p ng-show="userForm.confirmPassword.$invalid && !userForm.confirmPassword.$pristine" class="help-block red-text text-accent-4">*Re-Password is required.</p>
+                            <p ng-show="!userForm.confirmPassword.$pristine" class="help-block red-text text-accent-4">*Re-Password is required.</p>
                             <label for="confirmPassword">Re-Password</label>
                         </div>
                     </div>
