--- a/online_collaboration/app/components/blog/createBlog.html
+++ b/online_collaboration/app/components/blog/createBlog.html
@@ -1,33 +1,32 @@
-    <div class="container">
-        <div class="col s8 m4">
-            <div class="card orange darken-1">
-                <div class="card-content purple-text text-darken-4">
-                    <div align="center">
-                        <span class="card-title purple-text text-darken-4">Blog</span>
-                    </div>
-                    <form class="col s12 m6">
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <i class="material-icons prefix">mode_edit</i>
-                                <input id="icon_prefix" type="text" class="validate">
-                                <label for="icon_prefix">Heading</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <i class="material-icons prefix">mode_edit</i>
-                                <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                                <label for="icon_prefix2">Description</label>
-                            </div>
-                        </div>
-                    </form>
+<div class="row">
+    <div class="col s7 m6 offset-m3 offset-s3">
+        <div class="card orange darken-1">
+            <div class="card-content purple-text text-darken-4 hoverable">
+                <div align="center">
+                    <span class="card-title purple-text text-darken-4">Blog</span>
                 </div>
-                <div class="card-action">
-                    <div align="center">
-                        <a class="waves-effect waves-light btn col s5  purple darken-4">Create Blog</a>
+                <form ng-submit="blogCtrl.submit()">
+                    <div class="row">
+                        <div class="input-field">
+                            <i class="material-icons prefix">mode_edit</i>
+                            <input id="icon_prefix" type="text" id="title" name="title" ng-model="blogCtrl.blog.title">
+                            <label for="icon_prefix">Heading</label>
+                        </div>
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="input-field">
+                            <i class="material-icons prefix">mode_edit</i>
+                            <textarea id="icon_prefix2" class="materialize-textarea" id="description" name="description" ng-model="blogCtrl.blog.description"></textarea>
+                            <label for="icon_prefix2">Description</label>
+                        </div>
+                    </div>
+                    <div align="center">
+                        <button class="waves-effect waves-light purple darken-4 orange-text text-darken-1 hoverable" type="submit">Create Blog</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-    <!-- create blog ends here -->
+</div>
+
+<!-- create blog ends here -->
