--- a/online_collaboration/app/components/blog/viewBlog.html
+++ b/online_collaboration/app/components/blog/viewBlog.html
@@ -1,16 +1,13 @@
-<div class="row">
-    <div class="col s12 m6">
+<div class="row" ng-repeat="blog in blogCtrl.blogs |orderBy : 'postDate': reverse">
+    <div class="col s7 m6 offset-m3 offset-s3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-                <span class="card-title">Title</span>
-                <p>Description</p>
+                <span class="card-title orange-text text-accent-2">{{blog.blog.title}}</span><br>
+                <span class="orange-text text-accent-2">Created By:</span> <b>{{blog.firstName}} {{blog.lastname}}</b>
+                <span class="orange-text text-accent-2">Created At:</span> {{blog.blog.postDate | date : 'h:mm a, MMM d, y '}}</p>
             </div>
             <div class="card-action">
-                <a href="#"><i class="material-icons">thumb_up</i></a>
-                <a href="#"><i class="material-icons">comment</i></a>
-                <div class="pull-right">
-                    <a href="#">View comments</i></a>
-                </div>
+                <a href="#!/user/singleBlog" class="pull-right" ng-click="blogCtrl.getBlog(blog.blog.blogId)">View in detail</a>
             </div>
         </div>
     </div>
