--- a/online_collaboration/app/components/forum/createForum.html
+++ b/online_collaboration/app/components/forum/createForum.html
@@ -1,36 +1,20 @@
-<div class="container">
-    <div class="col s12 m6">
+<div class="row">
+    <div class="col s7 m6 offset-m3 offset-s3">
         <div class="card  teal darken-1">
             <div class="card-content black-text">
                 <span class="card-title">Forum</span>
-                <form class="col s12 m6">
+                <form ng-submit="forumCtrl.submit()">
                     <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">mode_edit</i>
-                            <input id="icon_prefix" type="text" class="validate">
+                            <input id="icon_prefix" type="text" class="validate" id="name" name="name" ng-model="forumCtrl.forum.name">
                             <label for="icon_prefix">Forum Name</label>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s12">
-                            <div class="input-field col s12">
-                                <select>
-      <option value="" disabled selected>Choose your option</option>
-      <option value="1">Option 1</option>
-      <option value="2">Option 2</option>
-      <option value="3">Option 3</option>
-    </select>
-                                <label>Forum Category</label>
-                            </div>
-                            <label>Select Forum category</label>
-                        </div>
+                        <button class="waves-effect waves-light teal lighten-3" type="submit">Create Forum</button>
                     </div>
                 </form>
-            </div>
-            <div class="card-action">
-                <div align="center">
-                    <a class="waves-effect waves-light btn col s5  teal lighten-3">Create Forum</a>
-                </div>
             </div>
         </div>
     </div>
