--- a/online_collaboration/app/components/forum/createForum.html
+++ b/online_collaboration/app/components/forum/createForum.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col s7 m6 offset-m3 offset-s3">
-        <div class="card  teal darken-1">
+        <div class="card teal darken-1">
             <div class="card-content black-text">
                 <span class="card-title">Forum</span>
                 <form ng-submit="forumCtrl.submit()">
@@ -12,7 +12,9 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button class="waves-effect waves-light teal lighten-3" type="submit">Create Forum</button>
+                        <div align="center">
+                            <button class="waves-effect waves-light teal lighten-3" type="submit">Create Forum</button>
+                        </div>
                     </div>
                 </form>
             </div>
