--- a/online_collaboration/app/components/blog/singleBlog.html
+++ b/online_collaboration/app/components/blog/singleBlog.html
@@ -1,24 +1,35 @@
 <div class="row">
-    <div class="col s7 m6 offset-m3 offset-s3">
+    <div class="container">
         <div class="card blue-grey darken-1">
             <div class="card-content">
-                <span class="card-title orange-text text-accent-2">{{blog.title}}</span>
+                <div align="center">
+                    <span class="card-title orange-text text-accent-2 center-align">{{blogCommentCtrl.singleBlog.blog.title}}</span>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <div class="container">
-    <p>{{blog.description}}</p>
+    <p>{{blogCommentCtrl.singleBlog.blog.description}}</p>
+    <div class="pull-right">
+        <p>-{{blogCommentCtrl.singleBlog.firstName}} {{blogCommentCtrl.singleBlog.lastname}}</p>
+    </div>
 </div>
 <div class="container">
-    <form ng-submit="">
+    <form ng-submit="blogCommentCtrl.submit()">
         <div class="row">
             <div class="input-field">
                 <i class="material-icons prefix">mode_edit</i>
-                <textarea id="icon_prefix2" class="materialize-textarea" id="comment" name="comment" ng-model="blogCtrl.blog.comment"></textarea>
+                <textarea id="icon_prefix2" class="materialize-textarea" id="comment" name="comment" ng-model="blogCommentCtrl.blogComment.comment"></textarea>
                 <label for="icon_prefix2">Comment</label>
-                <button class="waves-effect waves-light blue-grey darken-1 orange-text text-accent-2 hoverable">Comment</button>
+                <button class="waves-effect waves-light blue-grey darken-1 orange-text text-accent-2 hoverable" type="submit">Post a Comment</button>
             </div>
         </div>
     </form>
+</div>
+<div class="container">
+    <div class="row" ng-repeat="c in blogCommentCtrl.singleBlog.blogComment |orderBy : 'commentDate': reverse">
+        <p><b>{{c.username}}</b></p>
+        <p>{{c.comment}}</p><br>
+    </div>
 </div>
