worked on views and forum module.

--- a/online_collaboration/app/components/authentication/register.html
+++ b/online_collaboration/app/components/authentication/register.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="row">
                     <div align="center">
-                        <span class="card-title coll blue-grey-text text-darken-2">Communex</span><br>
+                        <span class="card-title coll blue-grey-text text-darken-2">coMmunEX</span><br>
                         <span class="blue-grey-text text-darken-2">Registration Form</span>
                     </div>
                 </div>
