--- a/online_collaboration/app/components/authentication/login.html
+++ b/online_collaboration/app/components/authentication/login.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s7 m6 offset-m3 offset-s3">
+    <div class="col s7 m4 offset-m4 offset-s3">
         <div class="card grey lighten-3">
             <div class="card-content grey-text text-darken-1 hoverable">
                 <div class="row">
@@ -9,7 +9,7 @@
                 </div>
                 <div class="row">
                     <div align="center">
-                        <span class="card-title coll blue-grey-text text-darken-2">COLLABORATION</span><br>
+                        <span class="card-title coll blue-grey-text text-darken-2">coMmunEX</span><br>
                         <span class="blue-grey-text text-darken-2">Login Form</span>
                     </div>
                 </div>
