--- a/online_collaboration/app/components/blog/createBlog.html
+++ b/online_collaboration/app/components/blog/createBlog.html
@@ -1,29 +1,33 @@
-<div class="row">
-    <div class="col s7 m6 offset-m3 offset-s3">
-        <div class="card orange darken-1">
-            <div class="card-content purple-text text-darken-4 hoverable">
-                <div align="center">
-                    <span class="card-title purple-text text-darken-4">Blog</span>
-                </div>
-                <form ng-submit="blogCtrl.submit()">
-                    <div class="row">
-                        <div class="input-field">
-                            <i class="material-icons prefix">mode_edit</i>
-                            <input id="icon_prefix" type="text" id="title" name="title" ng-model="blogCtrl.blog.title">
-                            <label for="icon_prefix">Heading</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field">
-                            <i class="material-icons prefix">mode_edit</i>
-                            <textarea id="icon_prefix2" class="materialize-textarea" id="description" name="description" ng-model="blogCtrl.blog.description"></textarea>
-                            <label for="icon_prefix2">Description</label>
-                        </div>
-                    </div>
+<div class="left-padding">
+    <div class="row"> <img src="assets/img/blog.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
+    </div>
+    <div class="row">
+        <div class="col s7 m6 offset-m3 offset-s3">
+            <div class="card yellow darken-1">
+                <div class="card-content purple-text text-darken-4 hoverable">
                     <div align="center">
-                        <button class="waves-effect waves-light purple darken-4 orange-text text-darken-1 hoverable" type="submit">Create Blog</button>
+                        <span class="card-title purple-text text-darken-4">Blog</span>
                     </div>
-                </form>
+                    <form ng-submit="blogCtrl.submit()">
+                        <div class="row">
+                            <div class="input-field">
+                                <i class="material-icons prefix">mode_edit</i>
+                                <input id="icon_prefix" type="text" id="title" name="title" ng-model="blogCtrl.blog.title">
+                                <label for="icon_prefix">Heading</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field">
+                                <i class="material-icons prefix">mode_edit</i>
+                                <textarea id="icon_prefix2" class="materialize-textarea" id="description" name="description" ng-model="blogCtrl.blog.description"></textarea>
+                                <label for="icon_prefix2">Description</label>
+                            </div>
+                        </div>
+                        <div align="center">
+                            <button class="waves-effect waves-light purple darken-4 orange-text text-darken-1 hoverable" type="submit">Create Blog</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
