--- a/online_collaboration/app/components/blog/myBlogs.html
+++ b/online_collaboration/app/components/blog/myBlogs.html
@@ -1,7 +1,7 @@
 <div class="left-padding">
     <div class="row"> <img src="assets/img/blog.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
     </div>
-    <div class="row" ng-repeat="blog in blogCtrl.blogs |orderBy : 'postDate': reverse">
+    <div class="row" ng-repeat="blog in blogCtrl.myBlogs |orderBy : 'postDate': reverse">
         <div class="col s10 m10 offset-m1 offset-s1">
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
@@ -20,5 +20,3 @@
 </div>
 </div>
 
-
-<!-- ng-click="blogCtrl.getBlog(blog.blog.blogId)" -->
