--- a/online_collaboration/app/components/blog/singleBlog.html
+++ b/online_collaboration/app/components/blog/singleBlog.html
@@ -1,3 +1,4 @@
+<div class="left-padding">
 <div class="row">
     <div class="container">
         <div class="card blue-grey darken-1">
@@ -21,7 +22,7 @@
     <p><b><span class="blue-grey-text text-darken-1">Comments</span></b></p>
     <hr>
     <div class="row" ng-repeat="c in blogCommentCtrl.singleBlog.blog.blogComment |orderBy : 'commentDate': reverse">
-        <p><b><span class="orange-text text-accent-2">{{c.username}}</span></b></p>
+        <p><b><span class="orange-text text-accent-2">{{c.username}}</span><span class="pull-right">{{c.commentDate | date : 'h:mm a, MMM d, y '}}</span></b></p>
         <p>{{c.comment}}</p><br>
         <hr>
     </div>
