--- a/online_collaboration/app/components/forum/viewForum.html
+++ b/online_collaboration/app/components/forum/viewForum.html
@@ -1,19 +1,25 @@
-<div class="row" ng-repeat="forum in forumCtrl.forums |orderBy : 'createdDate': reverse">
-    <div class="col s7 m6 offset-m3 offset-s3">
-        <div class="card blue lighten-2 hoverable">
-            <div class="card-content blue-text text-lighten-2">
-                <div class="row">
-                    <div class="col s12 m8">
-                        <span class="card-title blue-text text-darken-3">{{forum.forum.name}}</span><br>
-                        <span class="blue-text text-darken-3">Created By: <b>{{forum.firstName}} {{forum.lastname}}</b></span>
-                        <span class="blue-text text-darken-3">Created At: {{forum.forum.createdDate | date : 'h:mm a, MMM d, y '}}</span>
+<div class="left-padding">
+    <div class="row"> <img src="assets/img/forum.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
+    </div>
+    <div class="row" ng-repeat="forum in forumCtrl.forums |orderBy : 'createdDate': reverse">
+        <div class="col s10 m10 offset-m1 offset-s1">
+            <div class="card blue lighten-2 hoverable">
+                <div class="card-content blue-text text-lighten-2">
+                    <div class="row">
+                        <div class="col s12 m8">
+                            <div class="row">
+                                <div class="blog-title">
+                                    <a ng-href="#!/viewForum/{{forum.forum.forumId}}"><span class="card-title blue-text text-darken-3">{{forum.forum.name}}</span></a><br>
+                                </div>
+                            </div>
+                            <span class="blue-text text-darken-3">Created By: <b>{{forum.firstName}} {{forum.lastname}}</b></span>
+                            <span class="blue-text text-darken-3">On: {{forum.forum.createdDate | date : 'h:mm a, MMM d, y '}}</span><br>
+                            <a ng-href="#!/forum/members/{{forum.forum.forumId}}" class="blue-text text-darken-3" ng-click="forumCtrl.getForumMember(forum.forum.forumId)">Members</a>
+                        </div>
+                        <div class="col s12 m4">
+                            <button class="waves-effect blue darken-3 waves-light pull-right hoverable" ng-click="forumCtrl.sendForumRequest(forum.forum.forumId)"><i class="material-icons">touch_app</i> Join</button><br>
+                        </div>
                     </div>
-                    <div class="col s12 m4">
-                        <button class="waves-effect blue darken-3 waves-light pull-right hoverable" ng-click="forumCtrl.sendForumRequest(forum.forum.forumId)"><i class="material-icons">touch_app</i> Join</button>
-                    </div>
-                </div>
-                <div class="row"><a ng-href="#!/forum/members/{{forum.forum.forumId}}" class="blue-text text-darken-3" ng-click="forumCtrl.getForumMember(forum.forum.forumId)">Members</a>
-                <a ng-href="#!/viewForum/{{forum.forum.forumId}}" class="waves-effect waves-light btn blue darken-3 pull-right">Visit Forum</a>
                 </div>
             </div>
         </div>
