--- a/online_collaboration/app/components/user/viewMember.html
+++ b/online_collaboration/app/components/user/viewMember.html
@@ -1,12 +1,12 @@
-<div class="container">
-    <div class="row" ng-repeat="u in forumCommentCtrl.user |orderBy : 'userId'">
+<div class="container left-padding">
+    <div class="row" ng-repeat="member in forumCommentCtrl.members">
         <div class="col s6 m4">
             <a href="#!user"><img class="circle" src="assets/img/male.png" width="170px" height="170px"></a>
         </div>
         <div class="col s6 m8">
-            <span class="blue-text text-darken-3">{{u.username}}</span><br>
-            <span class="blue-text text-darken-3">{{u.firstName}} {{u.lastName}}</span><br>
-            <span class="blue-text text-darken-3">{{u.role}}</span><hr>
+            <span class="blue-text text-darken-3">{{member.username}}</span><br>
+            <span class="blue-text text-darken-3">{{member.firstName}} {{member.lastName}}</span><br>
+            <span class="blue-text text-darken-3">{{member.role}}</span><hr>
         </div>
     </div>
 </div>
