--- a/online_collaboration/app/components/forum/userForum.html
+++ b/online_collaboration/app/components/forum/userForum.html
@@ -1,7 +1,7 @@
 <div class="left-padding">
     <div class="row"> <img src="assets/img/forum.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
     </div>
-    <div class="row" ng-repeat="forum in forumCtrl.forums |orderBy : 'createdDate': reverse">
+    <div class="row" ng-repeat="forum in forumCtrl.userForum |orderBy : 'createdDate': reverse">
         <div class="col s10 m10 offset-m1 offset-s1">
             <div class="card blue lighten-2 hoverable">
                 <div class="card-content blue-text text-lighten-2">
@@ -15,9 +15,6 @@
                             <span class="blue-text text-darken-3">Created By: <b>{{forum.firstName}} {{forum.lastname}}</b></span>
                             <span class="blue-text text-darken-3">On: {{forum.forum.createdDate | date : 'h:mm a, MMM d, y '}}</span><br>
                             <a ng-href="#!/forum/members/{{forum.forum.forumId}}" class="blue-text text-darken-3" ng-click="forumCtrl.getForumMember(forum.forum.forumId)"><b>{{forum.noOfMembers}} Members</b></a>
-                        </div>
-                        <div class="col s12 m4">
-                            <button class="waves-effect blue darken-3 waves-light pull-right hoverable" ng-click="forumCtrl.sendForumRequest(forum.forum.forumId)" ng-if="forum.forumRequest == null"><i class="material-icons">touch_app</i> Join</button><br>
                         </div>
                     </div>
                 </div>
