--- a/online_collaboration/app/components/user/viewMember.html
+++ b/online_collaboration/app/components/user/viewMember.html
@@ -1,12 +1,25 @@
-<div class="container left-padding">
+<div class="left-padding">
+    <div class="row"> <img src="assets/img/forum.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
+    </div>
     <div class="row" ng-repeat="member in forumCommentCtrl.members">
-        <div class="col s6 m4">
-            <a href="#!user"><img class="circle" src="assets/img/male.png" width="170px" height="170px"></a>
-        </div>
-        <div class="col s6 m8">
-            <span class="blue-text text-darken-3">{{member.username}}</span><br>
-            <span class="blue-text text-darken-3">{{member.firstName}} {{member.lastName}}</span><br>
-            <span class="blue-text text-darken-3">{{member.role}}</span><hr>
+        <div class="col s10 m10 offset-m1 offset-s1">
+            <div class="card-panel blue lighten-2 hoverable">
+                <div class="row valign-wrapper">
+                    <div class="col s1">
+                        <img src="assets/img/male.png" alt="Profile image" class="circle responsive-img">
+                        <!-- notice the "circle" class -->
+                    </div>
+                    <div class="col s7">
+                        <span class="blue-text text-darken-3" ng-if="user.username == member.username"><b>YOU</b></span><br>
+                        <span class="blue-text text-darken-3" ng-if="user.username != member.username"><b>{{member.username}}</b></span><br>
+                        <span class="blue-text text-darken-3">Name: {{member.firstName}} {{member.lastName}}</span>
+                        <span class="blue-text text-darken-3">Role: {{member.role}}</span>
+                    </div>
+                    <div class="col s4">
+                        <button class="waves-effect blue darken-3 waves-light pull-right hoverable" ng-if="user.username != member.username"><i class="material-icons">touch_app</i> Add Friend</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
