worked on user module.

--- a/online_collaboration/app/components/authentication/error.html
+++ b/online_collaboration/app/components/authentication/error.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="container">   
+    <div class="container left-padding">   
         <h3>
             You are not authorized to view this content!
         </h3>
