--- a/online_collaboration/app/components/user/editProfile.html
+++ b/online_collaboration/app/components/user/editProfile.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="row">
                         <div align="center">
-                            <img src="assets/img/{{userCtrl.user.pictureId}}" class="img-circle materialboxed" alt="Cinque Terre" width="200" height="200">
+                            <img src="assets/img/{{userCtrl.customer.profileId}}" class="img-circle materialboxed" alt="Cinque Terre" width="200" height="200">
                         </div>
                     </div>
                     <form action="#">
