--- a/online_collaboration/app/components/page/contact.html
+++ b/online_collaboration/app/components/page/contact.html
@@ -1,2 +1,29 @@
-
-
+<div class="left-padding">
+    <div class="row"> <img src="assets/img/client.jpg" class="img-square image" alt="Cinque Terre" width="100" height="100">
+    </div>
+    <div class="row">
+        <div class="col s10 m10 offset-m1 offset-s1">
+            <div class="card horizontal blue-grey lighten-4 hoverable">
+                <div class="card-image u-img">
+                    <img src="assets/img/{{user.profileId}}" width="150" height="150">
+                </div>
+                <div class="card-stacked">
+                    <div class="card-content u-info">
+                        <div class="row">
+                            <div align="center">
+                                <span class="blue-grey-text text-darken-2">Edit Profile</span>
+                            </div>
+                        </div>
+                        <p>Name: <b>{{user.firstName}} {{user.lastName}}</b></p>
+                        <p>Registered As: {{user.role}}</p>
+                        <p>Email: {{user.emailId}}</p>
+                        <p>Gender: {{user.gender}}</p>
+                    </div>
+                    <div class="card-action u-btn">
+                        <a class="waves-effect waves-light btn col s5 offset-m1 offset-s1 green darken-4 hoverable" ng-click="adminCtrl.approveUser(user.userId)"><i class="material-icons">touch_app</i> Add Friend</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
